--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
   <link rel="stylesheet" href="bootstrap.min.css"> 
   <link rel="stylesheet" href="bootstrap-theme.min.css"> 
   <link rel="stylesheet" type="text/css" href="style_new.css"/>
-  <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-  <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -160,7 +158,7 @@ href="http://aleksandarmilicevic.github.io">http://aleksandarmilicevic.github.io
   <div class="panel-group" id="accordion">
     <div id="_papers" class="panel panel-default">
         <div class="panel-heading">
-	   <h4 class="panel-title accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#_papers_body">Publications</h4>
+	   <h4 class="panel-title accordion-toggle">Publications</h4>
 	</div> 
         <div id="_papers_body" class="panel-collapse collapse in">
 	<div class="panel-body">
@@ -441,7 +439,7 @@ SIGSOFT Symposium<br/> on the Foundations of Software Engineering</span> (<a hre
 <!--     </div>   -->
     <div id="_education" class="panel panel-default">
         <div class="panel-heading">
-	   <h4 class="panel-title accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#_education_body">Education</h4>
+	   <h4 class="panel-title accordion-toggle" href="#_education_body">Education</h4>
 	</div> 
 	<div id="_education_body" class="panel-collapse collapse in">
         <div class="panel-body">
@@ -469,8 +467,7 @@ SIGSOFT Symposium<br/> on the Foundations of Software Engineering</span> (<a hre
     </div>
     <div id="_experience" class="panel panel-default">
         <div class="panel-heading">
-	   <h4 class="panel-title accordion-toggle" 
-		data-toggle="collapse" data-parent="#accordion" href="#_experience_body">Experience</h4>
+	   <h4 class="panel-title accordion-toggle" href="#_experience_body">Experience</h4>
 	</div> 
         <div id="_experience_body" class="panel-collapse collapse in">
         <div class="panel-body">
@@ -610,8 +607,7 @@ href="http://research.microsoft.com/en-us/labs/cambridge/default.aspx">Microsoft
 
     <div id="_teaching" class="panel panel-default">
         <div class="panel-heading">
-	   <h4 class="panel-title accordion-toggle" data-toggle="collapse" 
-               data-parent="#accordion" href="#_teaching_body">Teaching Activities</h4>
+	   <h4 class="panel-title accordion-toggle" href="#_teaching_body">Teaching Activities</h4>
 	</div> 
         <div id="_teaching_body" class="panel-collapse collapse in">
         <div class="panel-body">
@@ -636,8 +632,7 @@ href="http://research.microsoft.com/en-us/labs/cambridge/default.aspx">Microsoft
 
     <div id="_awards" class="panel panel-default">
         <div class="panel-heading">
-	   <h4 class="panel-title accordion-toggle" data-toggle="collapse" 
-               data-parent="#accordion" href="#_awards_body">Awards and Scholarships</h4>
+	   <h4 class="panel-title accordion-toggle" href="#_awards_body">Awards and Scholarships</h4>
 	</div> 
         <div id="_awards_body" class="panel-collapse collapse in">
         <div class="panel-body">
@@ -747,34 +742,6 @@ href="http://research.microsoft.com/en-us/labs/cambridge/default.aspx">Microsoft
 </div>
 
 <hr/>
-
-<script type="text/javascript">
-  $(".panel-collapse").removeClass("in").addClass("out")
-  <!-- var sections = ["cv_papers", "cv_education", "cv_experience", "cv_teaching", "cv_awards", "cv_skills"]; -->
-  <!-- for (x = 0; x < sections.length; x++) { -->
-  <!--   var s = document.getElementById(sections[x]); -->
-  <!--   if (s != null) { -->
-  <!--     var elem = s.children[0]; -->
-  <!--     elem.onclick = function () { -->
-  <!--       var next = this.nextElementSibling; -->
-  <!--       if (next.style["display"] == "none") { -->
-  <!--         this.style.backgroundImage = "url('up.png')"; -->
-  <!--         next.style["display"] = "block"; -->
-  <!--       } else { -->
-  <!--         this.style.backgroundImage = "url('down.png')"; -->
-  <!--         next.style["display"] = "none"; -->
-  <!--       } -->
-  <!--     } -->
-  <!--     elem.onclick(); -->
-  <!--   } -->
-  <!-- } -->
-</script>
-
-<address><a href="mailto:aleks@csail.mit.edu">Aleksandar Milicevic</a></address>
-<!-- Created: Sun Feb 19 16:01:27 EST 2012 -->
-<!-- hhmts start -->
-Last modified: Mon Jul  7 17:45:51 EDT 2014
-<!-- hhmts end -->
 
 </body>
 
