add alloy* supporting materials

--- a/index.html
+++ b/index.html
@@ -161,9 +161,8 @@ href="http://aleksandarmilicevic.github.io">http://aleksandarmilicevic.github.io
 	   <h4 class="panel-title accordion-toggle">Publications</h4>
 	</div> 
         <div id="_papers_body" class="panel-collapse collapse in">
-	<div class="panel-body">
+	<div class="panel-body" style="padding-left:0px">
             <ul class="lst">
-
               <li>
 <span class="paper-title">Alloy*: A Higher-Order Relational Constraint Solver</span>
 <span class="date"><span class="slides">[<a href="http://alloy.mit.edu/alloy/hola">website</a>]</span></span>
@@ -171,16 +170,16 @@ href="http://aleksandarmilicevic.github.io">http://aleksandarmilicevic.github.io
 <span class="paper-author">A. Milicevic</span>, J. P. Near, E. Kang, and D. Jackson<br/>
 <ul class="scnd">
   <li>
-     <span class="conf-name">37th International Conference on Software Engineering (<a href="http://2015.icse-conferences.org/">ICSE 2015</a>), Florence, Italy, May 2015. [to appear]</span>
+     <span class="conf-name">37th International Conf. on Software Engineering (<a href="http://2015.icse-conferences.org/">ICSE 2015</a>), Florence, Italy, May 2015.</span>
      <span class="date">
-     <!-- <span class="slides">[<a href="papers/splash12-jen-slides.pdf">slides</a>]</span> -->
-     <!-- <span class="abstract">[<a href="papers/splash12-jen-abstract.txt">abstract</a>]</span> -->
+     <span class="slides">[<a href="papers/icse15-alloystar-slides.pdf">slides</a>]</span>
+     <span class="abstract">[<a href="papers/icse15-alloystar-abstract.txt">abstract</a>]</span>
      <span class="fulltext">[<a href="papers/icse15-alloystar.pdf">full text</a>]</span>
-     <!-- <span class="bibtex">[<a href="papers/splash12-jen-bibtex.txt">bibtex</a>]</span> -->
+     <span class="bibtex">[<a href="papers/icse15-alloystar-bibtex.txt">bibtex</a>]</span>
      </span>
   </li>
   <li>
-     <span class="conf-name">Massachusetts Institute of Technology Technical Report, September 2014</span> (<a href="http://dspace.mit.edu/handle/1721.1/89157">MIT-TR-2014-018</a>)
+     <span class="conf-name">MIT Technical Report, September 2014</span> (<a href="http://dspace.mit.edu/handle/1721.1/89157">MIT-TR-2014-018</a>)
      <span class="date">
 <span class="abstract">[<a href="papers/mit-tr14-hola-abstract.txt">abstract</a>]</span>
 <span class="fulltext">[<a href="papers/mit-tr14-hola.pdf">full text</a>]</span>
