--- a/index.html
+++ b/index.html
@@ -189,19 +189,18 @@ href="http://aleksandarmilicevic.github.io">http://aleksandarmilicevic.github.io
 </ul>
              </li>
 
-
-           <!--    <li> -->
-<!-- <span class="paper-title">Alloy*: A Higher-Order Relational Constraint Solver</span> -->
-<!-- <span class="date"> -->
-<!-- <span class="slides">[<a href="http://alloy.mit.edu/alloy/hola">website</a>]</span>               -->
-<!-- <span class="abstract">[<a href="papers/mit-tr14-hola-abstract.txt">abstract</a>]</span> -->
-<!-- <span class="fulltext">[<a href="papers/mit-tr14-hola.pdf">full text</a>]</span> -->
-<!-- <span class="bibtex">[<a href="papers/mit-tr14-hola-bibtex.txt">bibtex</a>]</span>               -->
-<!-- </span> -->
-<!-- <br/> -->
-<!-- <span class="paper-author">A. Milicevic</span>, J. P. Near, E. Kang, and D. Jackson<br/> -->
-<!-- <span class="conf-name">Massachusetts Institute of Technology Technical Report, September 2014</span> (<a href="http://dspace.mit.edu/handle/1721.1/89157">MIT-CSAIL-TR-2014-018</a>)<br/> -->
-<!--              </li> -->
+              <li>
+<span class="paper-title">Advancing Declarative Programming</span>
+<span class="date">
+<span class="slides">[<a href="papers/mit15-milicevic-phd-slides.pdf">slides</a>]</span>
+<span class="abstract">[<a href="papers/mit15-milicevic-phd-abstract.txt">abstract</a>]</span>              
+<span class="fulltext">[<a href="papers/mit15-milicevic-phd.pdf">full text</a>]</span>              
+<span class="bibtex">[<a href="papers/mit15-milicevic-phd-bibtex.txt">bibtex</a>]</span>              
+</span>
+<br/>
+<span class="paper-author">A. Milicevic</span><br/>
+<span class="conf-name">Massachusetts Institute of Technology, PhD Thesis, May 2015.</span><br/> 
+             </li>
 
               <li>
 <span class="paper-title">&alpha;Rby&mdash;An Embedding of Alloy in Ruby</span>
