add distinguished paper awards

--- a/index.html
+++ b/index.html
@@ -164,13 +164,45 @@ href="http://aleksandarmilicevic.github.io">http://aleksandarmilicevic.github.io
 	<div class="panel-body" style="padding-left:0px">
             <ul class="lst">
               <li>
+<span class="paper-title">Multi-Representational Security Analysis</span>
+<span class="date">
+<span class="abstract">[<a href="papers/fse16-poirot-abstract.txt">abstract</a>]</span>              
+<span class="fulltext">[<a href="papers/fse16-poirot.pdf">full text</a>]</span>              
+<span class="bibtex">[<a href="papers/fse16-poirot-bibtex.txt">bibtex</a>]</span> 
+</span>
+<br/>
+E. Kang, <span class="paper-author">A. Milicevic</span>, and D. Jackson<br/>
+<span class="conf-name">24th ACM SIGSOFT
+Foundations of Software Engineering</span>
+(<a href="http://www.cs.ucdavis.edu/fse2016">FSE 2016</a>), Seattle,
+WA, USA, November 2016.<br/>
+<span class="bestpaper">(distinguished paper reward)</span>
+             </li>
+
+              <li>
+<span class="paper-title">Build System with Lazy Retrieval for Java Projects</span>
+<span class="date">
+<span class="abstract">[<a href="papers/fse16-molly-abstract.txt">abstract</a>]</span>              
+<span class="fulltext">[<a href="papers/fse16-molly.pdf">full text</a>]</span>              
+<span class="bibtex">[<a href="papers/fse16-molly-bibtex.txt">bibtex</a>]</span>              
+</span>
+<br/>
+A. Çelik, A. Knaust, <span class="paper-author">A. Milicevic</span>, and M. Gligoric<br/>
+<span class="conf-name">24th ACM SIGSOFT
+Foundations of Software Engineering</span>
+(<a href="http://www.cs.ucdavis.edu/fse2016">FSE 2016</a>), Seattle,
+WA, USA, November 2016.<br/>
+             </li>
+
+              <li>
 <span class="paper-title">Alloy*: A Higher-Order Relational Constraint Solver</span>
 <span class="date"><span class="slides">[<a href="http://alloy.mit.edu/alloy/hola">website</a>]</span></span>
 <br/>
 <span class="paper-author">A. Milicevic</span>, J. P. Near, E. Kang, and D. Jackson<br/>
 <ul class="scnd">
   <li>
-     <span class="conf-name">37th International Conf. on Software Engineering (<a href="http://2015.icse-conferences.org/">ICSE 2015</a>), Florence, Italy, May 2015.</span>
+     <span class="conf-name">37th International Conf. on Software Engineering (<a href="http://2015.icse-conferences.org/">ICSE 2015</a>), Florence, Italy, May 2015.</span> <br/>
+     <span class="bestpaper">(distinguished paper reward)</span>
      <span class="date">
      <span class="slides">[<a href="papers/icse15-alloystar-slides.pdf">slides</a>]</span>
      <span class="abstract">[<a href="papers/icse15-alloystar-abstract.txt">abstract</a>]</span>
