remove resume from webpage since it hasn't been updated

--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
                   <td class="secnd"><a
                                        href="http://aleksandarmilicevic.github.io">http://aleksandarmilicevic.github.io</a></td>
                 </tr>
-                <tr><td class="first">Resume:</td><td class="secnd">
-                    <a href="milicevic-resume.pdf">milicevic-resume.pdf</a>,&nbsp;
-                    <a href="milicevic-resume.txt">milicevic-resume.txt</a>,&nbsp;
-                    <a href="milicevic-cv.pdf">milicevic-cv.pdf</a></td></tr>
+                <!-- <tr><td class="first">Resume:</td><td class="secnd"> -->
+                <!--     <a href="milicevic-resume.pdf">milicevic-resume.pdf</a>,&nbsp; -->
+                <!--     <a href="milicevic-resume.txt">milicevic-resume.txt</a>,&nbsp; -->
+                <!--     <a href="milicevic-cv.pdf">milicevic-cv.pdf</a></td></tr> -->
                 <tr><td class="first">Links:</td>
                   <td class="secnd">
                     <a href="http://www.informatik.uni-trier.de/~ley/pers/hd/m/Milicevic:Aleksandar.html">DBLP</a>,&nbsp;
