update arby link to point to the arby @ csail website

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <h2>Research Projects</h2>
             <ul>
               <li><a href="http://alloy.mit.edu/alloy/hola">Alloy*</a>&mdash;a general-purpose, higher-order, relational constraint solver</li>
-              <li><a href="arby/index.html">&alpha;Rby</a>&mdash;an embedding of Alloy in Ruby</li>
+              <li><a href="http://people.csail.mit.edu/aleks/website/arby/">&alpha;Rby</a>&mdash;an embedding of Alloy in Ruby</li>
               <li><a href="http://people.csail.mit.edu/aleks/squander/">Squander</a>&mdash;a framework for unified execution of imperative code and declarative first-order specifications</li>
               <li>Jennisys&mdash;a programming language and a synthesis tool from declarative first-order specifications to imperative code</li>
               <li><a href="http://alloy.mit.edu">Alloy Analyzer</a>&mdash;a model finder for a first-order relational specification language</li>
