fix wrong formatting of some publications

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 	      <div class="panel-body" style="padding-left:0px">
                 <ol class="lst">
                   <li>
-                    <span class="paper-title">Multi-Representational Security Analysis</span>
+                    <span class="paper-title">Multi-Representational Security Analysis</span><br/>
                     E. Kang, <span class="paper-author">A. Milicevic</span>, and D. Jackson<br/>
                     <span class="conf-name">24th ACM SIGSOFT
                       Foundations of Software Engineering</span>
@@ -177,7 +177,7 @@
                   </li>
 
                   <li>
-                    <span class="paper-title">Build System with Lazy Retrieval for Java Projects</span>
+                    <span class="paper-title">Build System with Lazy Retrieval for Java Projects</span><br/>
                     A. Çelik, A. Knaust, <span class="paper-author">A. Milicevic</span>, and M. Gligoric<br/>
                     <span class="conf-name">24th ACM SIGSOFT
                       Foundations of Software Engineering</span>
