fix wrong formatting of some publications

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                   </li>
 
                   <li>
-                    <span class="paper-title">&alpha;Rby&mdash;An Embedding of Alloy in Ruby</span>
+                    <span class="paper-title">&alpha;Rby&mdash;An Embedding of Alloy in Ruby</span><br/>
                     <span class="paper-author">A. Milicevic</span>, Ido Efrati, and D. Jackson<br/>
                     <span class="conf-name">International Conference of Alloy, ASM, B, VDM, and Z Users </span>(<a href="http://www.irit.fr/ABZ2014/">ABZ 2014</a>), Toulouse, France, June 2014.<br/>
                     <span class="date">
